@@ -1,9 +1,10 @@
 ;--------------------------------------------------------------------------
-;  crt0.s - Generic crt0.s for a rabbit 2000
+;  crt0.s - Generic crt0.s for a Rabbit 2000
 ;	derived from "Generic crt0.s for a Z80"
 ;
 ;  Copyright (C) 2000, Michael Hope
-;  Modified for rabbit by Leland Morrison 2011
+;  Modified for Rabbit by Leland Morrison 2011
+;  Copyright (C) 2020, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -28,38 +29,122 @@
 ;   might be covered by the GNU General Public License.
 ;--------------------------------------------------------------------------
 
-        .module crt0
-       	.globl	_main
+	.module crt0
+	.globl	_main
+	.globl	__sdcc_external_startup
+
+GCSR		.equ	0x00 ; Global control / status register
+MMIDR		.equ	0x10
+STACKSEG	.equ	0x11
+SEGSIZE		.equ	0x13
+MB0CR		.equ	0x14 ; Memory Bank 0 Control Register
+MB1CR		.equ	0x15 ; Memory Bank 1 Control Register
+MB2CR		.equ	0x16 ; Memory Bank 2 Control Register
+MB3CR		.equ	0x17 ; Memory Bank 3 Control Register
 
 	.area	_HEADER (ABS)
-	;; Reset vector
+
+	; Reset vector - assuming smode0 and smode1 input pins are grounded
 	.org 	0
-	jp	init
 
-	.org	0x08
-	reti
-	.org	0x10
-	reti
-	.org	0x18
-	reti
-	.org	0x20
-	reti
-	.org	0x28
-	reti
-	.org	0x30
-	reti
-	.org	0x38
-	reti
+	; setup internal interrupts
+	ld	a, #1
+	ld	iir, a
 
-	.org	0x100
-init:
-	;; Set stack pointer directly above top of memory.
-	ld	sp,#0x0000
+	; Configure physical address space.
+	; Leave MB0CR Flash at default slow at /OE0, /CS0
+	; Assume slow RAM at /CS1, /OE1, /WE1
+	ld	a, #0x05
+	ioi
+	ld	(MB2CR), a;
 
-        ;; Initialise global variables
-        call    gsinit
+	; Configure logical address space. 32 KB root segment followed by 8 KB data segment, 16 KB stack segement, 8 KB xpc segment.
+	; By default, SDCC will use the root segment for code and constant data, stack segment for data (including stack). data segment and xpc segement are then unused.
+	ld	a, #0xa8	; 16 KB stack segment at 0xa000, 8 KB data segment at 0x8000
+	ioi
+	ld	(SEGSIZE), a
+
+	; Configure mapping to physical address space.
+	ld	a, #0x76
+	ioi
+	ld	(STACKSEG), a	; stack segment base at 0x76000 + 0xa000 = 0x80000
+
+	; Set stack pointer directly above top of stack segment
+	ld	sp, #0xe000
+
+	call __sdcc_external_startup
+
+	; Initialise global variables
+	call	gsinit
+
 	call	_main
 	jp	_exit
+
+	; Periodic Interrupt
+	.org	0x100
+	push	af
+	ioi
+	ld	a, (GCSR) ; clear interrupt
+	pop	af
+	reti
+
+	; Secondary Watchdog - Rabbit 3000A only
+	.org	0x100
+	reti
+
+	; rst 0x10
+	.org	0x120
+	ret
+
+	; rst 0x18
+	.org	0x130
+	ret
+
+	; rst 0x20
+	.org	0x140
+	ret
+
+	; rst 0x28
+	.org	0x150
+	ret
+
+	; Syscall instruction - Rabbit 3000A only
+	.org	0x160
+	ret
+
+	; rst 0x38
+	.org	0x170
+	ret
+
+	; Slave Port
+	.org	0x180
+	reti
+
+	; Timer A
+	.org	0x1a0
+	reti
+
+	; Timer B
+	.org	0x1b0
+	reti
+
+	; Serial Port A
+	.org	0x1c0
+	reti
+
+	; Serial Port B
+	.org	0x1d0
+	reti
+
+	; Serial Port C
+	.org	0x1e0
+	reti
+
+	; Serial Port D
+	.org	0x1f0
+	reti
+
+	.org	0x200
 
 	;; Ordering of segments for the linker.
 	.area	_HOME
@@ -75,11 +160,6 @@ init:
 	.area   _HEAP
 
 	.area   _CODE
-__clock::
-	ld	a,#2
-        rst     #0x28
-	ret
-
 _exit::
 	;; Exit - special code to the emulator
 	ld	a,#0
@@ -90,6 +170,25 @@ _exit::
 
 	.area   _GSINIT
 gsinit::
+	ld	bc, #l__DATA
+	ld	a, b
+	or	a, c
+	jr	Z, zeroed_data
+	ld	hl,	#s__DATA
+	ld	(hl), #0x00
+	dec	bc
+	ld	a, b
+	or	a, c
+	jr	Z, zeroed_data
+	ld	e, l
+	ld	d, h
+	inc	de
+zero_loop:
+	ldi	; Work around new ldir wait state bug.
+	jp	LO, zero_loop
+
+zeroed_data:
+
 	ld	bc, #l__INITIALIZER
 	ld	a, b
 	or	a, c
